commit 1 importing data
importing data sessions added

--- a/Indiviodual Plan.ipynb
+++ b/Indiviodual Plan.ipynb
@@ -21,7 +21,7 @@
    "id": "3d83b600-0a49-4930-ac6c-ffbda752f606",
    "metadata": {},
    "source": [
-    "## importing data(player(1))"
+    "## load package and importing data"
    ]
   },
   {
@@ -139,8 +139,544 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "048e9a1a-535e-4199-b71c-cdf28f2fb890",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 5 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>experience</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Pro     </td></tr>\n",
+       "\t<tr><td>Veteran </td></tr>\n",
+       "\t<tr><td>Amateur </td></tr>\n",
+       "\t<tr><td>Regular </td></tr>\n",
+       "\t<tr><td>Beginner</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 5 × 1\n",
+       "\\begin{tabular}{l}\n",
+       " experience\\\\\n",
+       " <chr>\\\\\n",
+       "\\hline\n",
+       "\t Pro     \\\\\n",
+       "\t Veteran \\\\\n",
+       "\t Amateur \\\\\n",
+       "\t Regular \\\\\n",
+       "\t Beginner\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 5 × 1\n",
+       "\n",
+       "| experience &lt;chr&gt; |\n",
+       "|---|\n",
+       "| Pro      |\n",
+       "| Veteran  |\n",
+       "| Amateur  |\n",
+       "| Regular  |\n",
+       "| Beginner |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  experience\n",
+       "1 Pro       \n",
+       "2 Veteran   \n",
+       "3 Amateur   \n",
+       "4 Regular   \n",
+       "5 Beginner  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 2 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>subscribe</th></tr>\n",
+       "\t<tr><th scope=col>&lt;lgl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> TRUE</td></tr>\n",
+       "\t<tr><td>FALSE</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 2 × 1\n",
+       "\\begin{tabular}{l}\n",
+       " subscribe\\\\\n",
+       " <lgl>\\\\\n",
+       "\\hline\n",
+       "\t  TRUE\\\\\n",
+       "\t FALSE\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 2 × 1\n",
+       "\n",
+       "| subscribe &lt;lgl&gt; |\n",
+       "|---|\n",
+       "|  TRUE |\n",
+       "| FALSE |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  subscribe\n",
+       "1  TRUE    \n",
+       "2 FALSE    "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 7 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>gender</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Male             </td></tr>\n",
+       "\t<tr><td>Female           </td></tr>\n",
+       "\t<tr><td>Non-binary       </td></tr>\n",
+       "\t<tr><td>Prefer not to say</td></tr>\n",
+       "\t<tr><td>Agender          </td></tr>\n",
+       "\t<tr><td>Two-Spirited     </td></tr>\n",
+       "\t<tr><td>Other            </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 7 × 1\n",
+       "\\begin{tabular}{l}\n",
+       " gender\\\\\n",
+       " <chr>\\\\\n",
+       "\\hline\n",
+       "\t Male             \\\\\n",
+       "\t Female           \\\\\n",
+       "\t Non-binary       \\\\\n",
+       "\t Prefer not to say\\\\\n",
+       "\t Agender          \\\\\n",
+       "\t Two-Spirited     \\\\\n",
+       "\t Other            \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 7 × 1\n",
+       "\n",
+       "| gender &lt;chr&gt; |\n",
+       "|---|\n",
+       "| Male              |\n",
+       "| Female            |\n",
+       "| Non-binary        |\n",
+       "| Prefer not to say |\n",
+       "| Agender           |\n",
+       "| Two-Spirited      |\n",
+       "| Other             |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  gender           \n",
+       "1 Male             \n",
+       "2 Female           \n",
+       "3 Non-binary       \n",
+       "4 Prefer not to say\n",
+       "5 Agender          \n",
+       "6 Two-Spirited     \n",
+       "7 Other            "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 33 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Age</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 9</td></tr>\n",
+       "\t<tr><td>17</td></tr>\n",
+       "\t<tr><td>21</td></tr>\n",
+       "\t<tr><td>19</td></tr>\n",
+       "\t<tr><td>47</td></tr>\n",
+       "\t<tr><td>22</td></tr>\n",
+       "\t<tr><td>23</td></tr>\n",
+       "\t<tr><td>25</td></tr>\n",
+       "\t<tr><td>58</td></tr>\n",
+       "\t<tr><td>28</td></tr>\n",
+       "\t<tr><td>18</td></tr>\n",
+       "\t<tr><td>33</td></tr>\n",
+       "\t<tr><td>26</td></tr>\n",
+       "\t<tr><td>20</td></tr>\n",
+       "\t<tr><td>24</td></tr>\n",
+       "\t<tr><td>27</td></tr>\n",
+       "\t<tr><td>42</td></tr>\n",
+       "\t<tr><td>11</td></tr>\n",
+       "\t<tr><td>10</td></tr>\n",
+       "\t<tr><td>38</td></tr>\n",
+       "\t<tr><td>14</td></tr>\n",
+       "\t<tr><td>15</td></tr>\n",
+       "\t<tr><td>37</td></tr>\n",
+       "\t<tr><td>16</td></tr>\n",
+       "\t<tr><td>12</td></tr>\n",
+       "\t<tr><td>46</td></tr>\n",
+       "\t<tr><td>32</td></tr>\n",
+       "\t<tr><td>49</td></tr>\n",
+       "\t<tr><td>45</td></tr>\n",
+       "\t<tr><td>NA</td></tr>\n",
+       "\t<tr><td>50</td></tr>\n",
+       "\t<tr><td>44</td></tr>\n",
+       "\t<tr><td>57</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 33 × 1\n",
+       "\\begin{tabular}{l}\n",
+       " Age\\\\\n",
+       " <dbl>\\\\\n",
+       "\\hline\n",
+       "\t  9\\\\\n",
+       "\t 17\\\\\n",
+       "\t 21\\\\\n",
+       "\t 19\\\\\n",
+       "\t 47\\\\\n",
+       "\t 22\\\\\n",
+       "\t 23\\\\\n",
+       "\t 25\\\\\n",
+       "\t 58\\\\\n",
+       "\t 28\\\\\n",
+       "\t 18\\\\\n",
+       "\t 33\\\\\n",
+       "\t 26\\\\\n",
+       "\t 20\\\\\n",
+       "\t 24\\\\\n",
+       "\t 27\\\\\n",
+       "\t 42\\\\\n",
+       "\t 11\\\\\n",
+       "\t 10\\\\\n",
+       "\t 38\\\\\n",
+       "\t 14\\\\\n",
+       "\t 15\\\\\n",
+       "\t 37\\\\\n",
+       "\t 16\\\\\n",
+       "\t 12\\\\\n",
+       "\t 46\\\\\n",
+       "\t 32\\\\\n",
+       "\t 49\\\\\n",
+       "\t 45\\\\\n",
+       "\t NA\\\\\n",
+       "\t 50\\\\\n",
+       "\t 44\\\\\n",
+       "\t 57\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 33 × 1\n",
+       "\n",
+       "| Age &lt;dbl&gt; |\n",
+       "|---|\n",
+       "|  9 |\n",
+       "| 17 |\n",
+       "| 21 |\n",
+       "| 19 |\n",
+       "| 47 |\n",
+       "| 22 |\n",
+       "| 23 |\n",
+       "| 25 |\n",
+       "| 58 |\n",
+       "| 28 |\n",
+       "| 18 |\n",
+       "| 33 |\n",
+       "| 26 |\n",
+       "| 20 |\n",
+       "| 24 |\n",
+       "| 27 |\n",
+       "| 42 |\n",
+       "| 11 |\n",
+       "| 10 |\n",
+       "| 38 |\n",
+       "| 14 |\n",
+       "| 15 |\n",
+       "| 37 |\n",
+       "| 16 |\n",
+       "| 12 |\n",
+       "| 46 |\n",
+       "| 32 |\n",
+       "| 49 |\n",
+       "| 45 |\n",
+       "| NA |\n",
+       "| 50 |\n",
+       "| 44 |\n",
+       "| 57 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   Age\n",
+       "1   9 \n",
+       "2  17 \n",
+       "3  21 \n",
+       "4  19 \n",
+       "5  47 \n",
+       "6  22 \n",
+       "7  23 \n",
+       "8  25 \n",
+       "9  58 \n",
+       "10 28 \n",
+       "11 18 \n",
+       "12 33 \n",
+       "13 26 \n",
+       "14 20 \n",
+       "15 24 \n",
+       "16 27 \n",
+       "17 42 \n",
+       "18 11 \n",
+       "19 10 \n",
+       "20 38 \n",
+       "21 14 \n",
+       "22 15 \n",
+       "23 37 \n",
+       "24 16 \n",
+       "25 12 \n",
+       "26 46 \n",
+       "27 32 \n",
+       "28 49 \n",
+       "29 45 \n",
+       "30 NA \n",
+       "31 50 \n",
+       "32 44 \n",
+       "33 57 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 1 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>mean_played_hours</th><th scope=col>mean_age</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>5.845918</td><td>21.13918</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 1 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " mean\\_played\\_hours & mean\\_age\\\\\n",
+       " <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 5.845918 & 21.13918\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 1 × 2\n",
+       "\n",
+       "| mean_played_hours &lt;dbl&gt; | mean_age &lt;dbl&gt; |\n",
+       "|---|---|\n",
+       "| 5.845918 | 21.13918 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  mean_played_hours mean_age\n",
+       "1 5.845918          21.13918"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "distinct(players,experience)\n",
+    "distinct(players,subscribe)\n",
+    "distinct(players,gender)\n",
+    "distinct(players,Age)\n",
+    "players |> summarize(mean_played_hours = mean(played_hours, na.rm = TRUE),\n",
+    "                        mean_age = mean(Age, na.rm = TRUE))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9a96de87-9fad-4b17-810e-b0516ef51e6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mRows: \u001b[22m\u001b[34m1535\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m5\u001b[39m\n",
+      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
+      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
+      "\u001b[31mchr\u001b[39m (3): hashedEmail, start_time, end_time\n",
+      "\u001b[32mdbl\u001b[39m (2): original_start_time, original_end_time\n",
+      "\n",
+      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
+      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 6 × 5</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>hashedEmail</th><th scope=col>start_time</th><th scope=col>end_time</th><th scope=col>original_start_time</th><th scope=col>original_end_time</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf</td><td>30/06/2024 18:12</td><td>30/06/2024 18:24</td><td>1.71977e+12</td><td>1.71977e+12</td></tr>\n",
+       "\t<tr><td>36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686</td><td>17/06/2024 23:33</td><td>17/06/2024 23:46</td><td>1.71867e+12</td><td>1.71867e+12</td></tr>\n",
+       "\t<tr><td>f8f5477f5a2e53616ae37421b1c660b971192bd8ff77e3398304c7ae42581fdc</td><td>25/07/2024 17:34</td><td>25/07/2024 17:57</td><td>1.72193e+12</td><td>1.72193e+12</td></tr>\n",
+       "\t<tr><td>bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf</td><td>25/07/2024 03:22</td><td>25/07/2024 03:58</td><td>1.72188e+12</td><td>1.72188e+12</td></tr>\n",
+       "\t<tr><td>36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686</td><td>25/05/2024 16:01</td><td>25/05/2024 16:12</td><td>1.71665e+12</td><td>1.71665e+12</td></tr>\n",
+       "\t<tr><td>bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf</td><td>23/06/2024 15:08</td><td>23/06/2024 17:10</td><td>1.71916e+12</td><td>1.71916e+12</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 6 × 5\n",
+       "\\begin{tabular}{lllll}\n",
+       " hashedEmail & start\\_time & end\\_time & original\\_start\\_time & original\\_end\\_time\\\\\n",
+       " <chr> & <chr> & <chr> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf & 30/06/2024 18:12 & 30/06/2024 18:24 & 1.71977e+12 & 1.71977e+12\\\\\n",
+       "\t 36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686 & 17/06/2024 23:33 & 17/06/2024 23:46 & 1.71867e+12 & 1.71867e+12\\\\\n",
+       "\t f8f5477f5a2e53616ae37421b1c660b971192bd8ff77e3398304c7ae42581fdc & 25/07/2024 17:34 & 25/07/2024 17:57 & 1.72193e+12 & 1.72193e+12\\\\\n",
+       "\t bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf & 25/07/2024 03:22 & 25/07/2024 03:58 & 1.72188e+12 & 1.72188e+12\\\\\n",
+       "\t 36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686 & 25/05/2024 16:01 & 25/05/2024 16:12 & 1.71665e+12 & 1.71665e+12\\\\\n",
+       "\t bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf & 23/06/2024 15:08 & 23/06/2024 17:10 & 1.71916e+12 & 1.71916e+12\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 6 × 5\n",
+       "\n",
+       "| hashedEmail &lt;chr&gt; | start_time &lt;chr&gt; | end_time &lt;chr&gt; | original_start_time &lt;dbl&gt; | original_end_time &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "| bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf | 30/06/2024 18:12 | 30/06/2024 18:24 | 1.71977e+12 | 1.71977e+12 |\n",
+       "| 36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686 | 17/06/2024 23:33 | 17/06/2024 23:46 | 1.71867e+12 | 1.71867e+12 |\n",
+       "| f8f5477f5a2e53616ae37421b1c660b971192bd8ff77e3398304c7ae42581fdc | 25/07/2024 17:34 | 25/07/2024 17:57 | 1.72193e+12 | 1.72193e+12 |\n",
+       "| bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf | 25/07/2024 03:22 | 25/07/2024 03:58 | 1.72188e+12 | 1.72188e+12 |\n",
+       "| 36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686 | 25/05/2024 16:01 | 25/05/2024 16:12 | 1.71665e+12 | 1.71665e+12 |\n",
+       "| bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf | 23/06/2024 15:08 | 23/06/2024 17:10 | 1.71916e+12 | 1.71916e+12 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  hashedEmail                                                     \n",
+       "1 bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf\n",
+       "2 36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686\n",
+       "3 f8f5477f5a2e53616ae37421b1c660b971192bd8ff77e3398304c7ae42581fdc\n",
+       "4 bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf\n",
+       "5 36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686\n",
+       "6 bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf\n",
+       "  start_time       end_time         original_start_time original_end_time\n",
+       "1 30/06/2024 18:12 30/06/2024 18:24 1.71977e+12         1.71977e+12      \n",
+       "2 17/06/2024 23:33 17/06/2024 23:46 1.71867e+12         1.71867e+12      \n",
+       "3 25/07/2024 17:34 25/07/2024 17:57 1.72193e+12         1.72193e+12      \n",
+       "4 25/07/2024 03:22 25/07/2024 03:58 1.72188e+12         1.72188e+12      \n",
+       "5 25/05/2024 16:01 25/05/2024 16:12 1.71665e+12         1.71665e+12      \n",
+       "6 23/06/2024 15:08 23/06/2024 17:10 1.71916e+12         1.71916e+12      "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>1535</li><li>5</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 1535\n",
+       "\\item 5\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 1535\n",
+       "2. 5\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 1535    5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "url_sessions = \"https://drive.google.com/uc?export=download&id=1qoiGA-idlIr7LE2972cbrWjOH2ar-88b\"\n",
+    "sessions <- read_csv(url_sessions)\n",
+    "head(sessions)\n",
+    "dim(sessions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83a2c9c6-ef75-4cc4-a0a1-958de29c34e4",
+   "metadata": {},
+   "source": [
+    "# Data description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0200fd3-9a6e-4d1f-a3b0-f1b6e63e99a4",
+   "metadata": {},
+   "source": [
+    "## Players"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1fc7f51-ea6f-4854-b1a6-2c856d9b9987",
+   "metadata": {},
+   "source": [
+    "#### It has 196 obervations and 7 variables"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "eff301c8-1111-4917-b5de-97168027f433",
+   "id": "577095cd-b79e-4979-8af9-e4335bf50cbe",
    "metadata": {},
    "outputs": [],
    "source": []
