Data description and Potential Issues
added Potential Issues and two Data descriptions to the indiviodual plan.

--- a/Indiviodual Plan.ipynb
+++ b/Indiviodual Plan.ipynb
@@ -139,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "048e9a1a-535e-4199-b71c-cdf28f2fb890",
+   "execution_count": 16,
+   "id": "2fab6b13-d44c-4e46-a228-46dfec59d458",
    "metadata": {},
    "outputs": [
     {
@@ -674,9 +674,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5172a933-11d2-4ea1-aae9-8ae7294dcec0",
+   "metadata": {},
+   "source": [
+    "+ `experience`: character, experience level of players, such as: `Pro`,`Veteran`,`Amateur`,`Regular`\n",
+    "+ `subscribe`: logical, whether or not player has subscribed, such as: `True` and `False`\n",
+    "+ `hashedEmail`: character, hashed email addrsses of players\n",
+    "+ `played_hours`: double, the game playing in hours \n",
+    "+ `name`: character, names of players\n",
+    "+ `gender`: character, gender of players, as: `Male`,`Female`,`Non-binary`.`Prefer not to say`,`Agender`,`Two-SpiritedandOther`\n",
+    "+ `Age`: double, age of players"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdde246d-a183-486b-b33b-a7ded25b4814",
+   "metadata": {},
+   "source": [
+    "## Sessions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "024cc1dc-dba7-4fcf-9717-ab640270d48f",
+   "metadata": {},
+   "source": [
+    "#### It has 1535 obervations and 5 variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32a0ebfb-ba76-47be-9f38-f85186292249",
+   "metadata": {},
+   "source": [
+    "+ `hashedEmail`: character, hashed email addrsses of players\n",
+    "+ `start_time`: character, start time of the lastest game\n",
+    "+ `end_time`: character, end time of the lastest game\n",
+    "+ `original_start_time`: double, original data of start_time, not human readable\n",
+    "+ `original_end_time`: double, original data of end_time, not human readable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f33264b-5fe3-4e73-a5d9-539c4f4d817e",
+   "metadata": {},
+   "source": [
+    "## Potential Issues"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "523ea510-e70b-4fd2-98f9-8d2576f54962",
+   "metadata": {},
+   "source": [
+    "+ `HashedEmail` is a little bit useless in the data\n",
+    "+ The number of `Non-binary`, `Prefer not to say Agender`, `Two-Spirited` and `Other`are really small compare to `male` and `female`.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "577095cd-b79e-4979-8af9-e4335bf50cbe",
+   "id": "2d9eb35a-33a1-496d-a24f-29628d56f428",
    "metadata": {},
    "outputs": [],
    "source": []
