--- a/Indiviodual Plan.ipynb
+++ b/Indiviodual Plan.ipynb
@@ -654,7 +654,7 @@
    "id": "83a2c9c6-ef75-4cc4-a0a1-958de29c34e4",
    "metadata": {},
    "source": [
-    "# Data description"
+    "## Data description"
    ]
   },
   {
@@ -662,7 +662,7 @@
    "id": "b0200fd3-9a6e-4d1f-a3b0-f1b6e63e99a4",
    "metadata": {},
    "source": [
-    "## Players"
+    "### Players"
    ]
   },
   {
@@ -692,7 +692,7 @@
    "id": "bdde246d-a183-486b-b33b-a7ded25b4814",
    "metadata": {},
    "source": [
-    "## Sessions"
+    "### Sessions"
    ]
   },
   {
@@ -720,7 +720,7 @@
    "id": "4f33264b-5fe3-4e73-a5d9-539c4f4d817e",
    "metadata": {},
    "source": [
-    "## Potential Issues"
+    "### Potential Issues"
    ]
   },
   {
@@ -737,7 +737,7 @@
    "id": "9e23bed3-a1ea-43cb-8c31-1059cde4af2c",
    "metadata": {},
    "source": [
-    "# Data Visualization"
+    "## Data Visualization"
    ]
   },
   {
@@ -1466,7 +1466,7 @@
    "id": "3f69fbc1-f3b6-498c-9be1-2fcf779a6de4",
    "metadata": {},
    "source": [
-    "When we focus on players ≤ 50 years old who’ve played ≤ 10 hours.Those aged 10–30 who’ve played ≤ 4 hours are the most likely to subscribe, so we’ll use age and hours played as our predictors."
+    "When we focus on players ≤ 50 years old who’ve played ≤ 10 hours.Those aged 10–30 who’ve played ≤ 4 hours are the most likely to subscribe, so we’ll use age and played time as our predictors."
    ]
   },
   {
@@ -2700,6 +2700,71 @@
    "source": [
     "Gender has a very weak ability to distinguish the depth of play, and therefore should not be used as a primary predictor variable."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33d2a92b-df08-4e4d-b80a-f8a6b62bf811",
+   "metadata": {},
+   "source": [
+    "## Selected Question"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "401287cc-3263-4676-b6a5-b323abacdd00",
+   "metadata": {},
+   "source": [
+    "#### I select to answer:  \n",
+    "`Question 1` : `What player characteristics and behaviours are most predictive of subscribing to a game-related newsletter, and how do these features differ between various player types?`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c7fb944-693d-4c7f-9651-08511193f8a0",
+   "metadata": {},
+   "source": [
+    "+ ##### Because it is categorical, I need to use knn classification to solve the question.I will use `Age` and `played_hours` as predictor to predict subscribe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "389686e1-92e6-4172-b823-648470e4839a",
+   "metadata": {},
+   "source": [
+    "+ ##### We assume that other factors do not affect the subscription outcome."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57f294dc-0051-4df4-9d72-f615aff8fca8",
+   "metadata": {},
+   "source": [
+    "+ ##### It is a potential limitation that other factors may affect whether players subscribe or not but we did not take in consideration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "330a3676-a807-4942-a789-b8ad7f533754",
+   "metadata": {},
+   "source": [
+    "+ ##### I'll split the data into `75%` `training data` and `25%` `testing data`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e140acce-c356-4b18-9090-914c3dec5091",
+   "metadata": {},
+   "source": [
+    "+ ##### I will first use cross-validation and tuning k to select the optimal k for the classifier. After applying the best k value to the training set, I will use the testing set to evaluate the model's accuracy, assess its performance, and discuss potential improvements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13d22246-3f20-41cd-9a15-32ba499ee226",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
